KNN graph adjusted

--- a/code/knn.ipynb
+++ b/code/knn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e8cc0e99",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "91c2bfeb",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "85d78f3c",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d93df1db",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0320c703",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "84d1cd96",
    "metadata": {},
    "outputs": [
@@ -236,17 +236,17 @@
     "plt.scatter(best_k, best_acc, c=\"red\", s=120)\n",
     "plt.title(\"Best Number of Neighbors for KNN - Cross Validation\", fontsize=FONT)\n",
     "plt.xlabel(\"Number of Neighbors\", fontsize=FONT-1)\n",
-    "plt.ylabel(\"RMSE (10-fold CV)\", fontsize=FONT-1)\n",
+    "plt.ylabel(\"Validation Accuracy (5-fold CV)\", fontsize=FONT-1)\n",
     "plt.tick_params(axis=\"both\", labelsize=FONT-2)\n",
     "\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(\"../img/knn_crossval.pdf\")\n",
+    "plt.savefig(\"../img/knn_crossval.pdf\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c96d4ee7",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "dabebe82",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d297d5d7",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "83c92431",
    "metadata": {},
    "outputs": [
